--- a/razzle/flask_app/static/css/style.css
+++ b/razzle/flask_app/static/css/style.css
@@ -1,4 +1,109 @@
+
+
 body {
     background-color: #140c1f;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='18' viewBox='0 0 100 18'%3E%3Cpath fill='%23ff3ff6' fill-opacity='0.4' d='M61.82 18c3.47-1.45 6.86-3.78 11.3-7.34C78 6.76 80.34 5.1 83.87 3.42 88.56 1.16 93.75 0 100 0v6.16C98.76 6.05 97.43 6 96 6c-9.59 0-14.23 2.23-23.13 9.34-1.28 1.03-2.39 1.9-3.4 2.66h-7.65zm-23.64 0H22.52c-1-.76-2.1-1.63-3.4-2.66C11.57 9.3 7.08 6.78 0 6.16V0c6.25 0 11.44 1.16 16.14 3.42 3.53 1.7 5.87 3.35 10.73 7.24 4.45 3.56 7.84 5.9 11.31 7.34zM61.82 0h7.66a39.57 39.57 0 0 1-7.34 4.58C57.44 6.84 52.25 8 46 8S34.56 6.84 29.86 4.58A39.57 39.57 0 0 1 22.52 0h15.66C41.65 1.44 45.21 2 50 2c4.8 0 8.35-.56 11.82-2z'%3E%3C/path%3E%3C/svg%3E");
+}
+
+.container {
+    margin-top: 5px
+}
+
+.bannerRow {
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+    align-items: center;
+    height: 300px;
+    width: auto;
+}
+
+#cart_icon {
+    height: 50px;
+    width: 50px;
+}
+
+.banner h1 a {
+    display: flex;
+    justify-content: left;
+    color: magenta;
+    margin-left: 10px;
+    font-style: italic;
+    outline: none;
+    text-decoration: none;
+}
+
+#Big {
+    width: 500px;
+    height: 280px;
+}
+
+.dashDecor {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.dashDecor h1 {
+    margin-top: -40px;
+    color: darkgray;
+    font-size: 55px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+#dashP {
+    color: blueviolet;
+}
+
+.card {
+    display: inline-block;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 240px;
+    height: 480px;
+    margin: 10px;
+    text-align: center;
+    font-family: arial;
+    color: black;
+    /* padding-top: 50px; */
+    padding: 1%;
+    vertical-align: top;
+}
+
+.card h1 {
+    font-size: x-large;
+}
+
+.price {
+    color: grey;
+    font-size: 22px;
+}
+
+.card button {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+    vertical-align: bottom;
+
+}
+
+.dashDes {
+    font-size: 11pt;
+    padding-bottom: 15%;
+    vertical-align: top;
+}
+
+.card button:hover {
+    opacity: 0.7;
+}
+
+.card img {
+    width: 50px;
+    height: 212.09px;
 }
