--- a/razzle/flask_app/templates/index.html
+++ b/razzle/flask_app/templates/index.html
@@ -28,9 +28,9 @@
                 <label for="last_name">Last Name:</label>
                 <input type="text" class="form-control" required name="last_name" id="last_name" required>
                 <label for="email">Email:</label>
-                <input type="email" class="form-control" required name="email" id="email" required>
+                <input type="email" class="form-control" required name="email" required>
                 <label for="password">Password:</label>
-                <input type="password" class="form-control" required name="password" id="password" required>
+                <input type="password" class="form-control" required name="password"  required>
                 <label for="confirm">Confirm Password:</label>
                 <input type="password" class="form-control" required name="confirm" id="confirm" required>
                 <input type="submit" class="bg-primary text-white form-control"  value="Register" style="margin-top: 10px;">
@@ -45,9 +45,9 @@
                 {% endwith %}
                 <h1 style="color:limegreen">Login</h1>
                 <label for="email">Email:</label>
-                <input type="email" class="form-control" required name="email" id="email">
+                <input type="email" class="form-control" required name="email" >
                 <label for="password">Password:</label>
-                <input type="password" class="form-control" required name="password" id="password">
+                <input type="password" class="form-control" required name="password" >
                 <input type="submit" class="form-control"  style="color:white; background-color: limegreen; margin-top: 10px; font-weight: bolder ; " value="Login" >
             </form>
         </div>
