--- a/razzle/flask_app/templates/cart.html
+++ b/razzle/flask_app/templates/cart.html
@@ -43,28 +43,26 @@
         <table class="table table-dark table-striped text-white">
             <thead>
                 <tr>
-                    <th scope="col">Product Name</th>
-                    <th scope="col">Description</th>
-                    <th>Quantity</th>
+                    <th>Product Name</th>
                     <th>Price</th>
+                    <th>Quantity</th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td> session:product.name</td>
-                    <td> session:product.description</td>
-                    <td> session:product.quantity</td>
-                    <td> session:product.price</td>
-                </tr>
-                <tr>
-                    <td> session:product.name</td>
-                    <td> session:product.description</td>
-                    <td> session:product.quantity</td>
-                    <td> session:product.price</td>
-                </tr>
+
+                {% for item in session['cart'] %}
+                    <tr>
+                    <td> {{item['name']}}</td>
+                  
+                    <td> ${{item.price}}</td>
+
+                    <td> {{item.quantity}}</td>
+        
+                    </tr>
+                {% endfor %}
             </tbody>
         </table>
-        <h3>Total Price: session:totalPrice</h3>
+        <h3>Total Price: ${{session['cart_total']}}</h3>
         <h3>Estimated Shipping: $23.99</h3>
         <form action="/place_order" method="post">
             <button type="button" class="btn btn-outline-info">Confirm Order</button>
