--- a/razzle/flask_app/templates/cart.html
+++ b/razzle/flask_app/templates/cart.html
@@ -20,7 +20,7 @@
             </div>
             <div class="col col-4 "></div>
             <div class="col">
-                <a href="/about">Company</a>
+            <a href="/my_orders">My Orders</a>
             </div>
             <div class="col">
                 <a href="/categories">Categories</a>
@@ -65,7 +65,7 @@
         <h3>Total Price: ${{session['cart_total']}}</h3>
         <h3>Estimated Shipping: $23.99</h3>
         <form action="/place_order" method="post">
-            <button type="button" class="btn btn-outline-info">Confirm Order</button>
+            <button type="submit" class="btn btn-outline-info">Confirm Order</button>
         </form>
     </div>
 </body>
