--- a/razzle/flask_app/templates/add_product.html
+++ b/razzle/flask_app/templates/add_product.html
@@ -18,7 +18,7 @@
             </div>
             <div class="col col-4 "></div>
             <div class="col">
-                <a href="/about">Company</a>
+                       <a href="/my_orders">My Orders</a>
             </div>
             <div class="col">
                 <a href="/categories">Categories</a>
