--- a/razzle/flask_app/templates/dashboard.html
+++ b/razzle/flask_app/templates/dashboard.html
@@ -5,7 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
     <link href="static/css/style.css" rel="stylesheet">
     <title>Dashboard</title>
 </head>
@@ -46,8 +52,85 @@
                                 <p>{{message}}</p>                   <!-- display each message in a paragraph tag -->
                             {% endfor %}
                         {% endif %}
-                    {% endwith %}
-        <div class="banner_box" style="display: flex-box; justify-content: center; width: inherit; ">
+        {% endwith %}
+
+    <div id="banner_box" >
+        <div id="bestseller_banner" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#bestseller_banner" data-slide-to="0" class="active"></li>
+        <li data-target="#bestseller_banner" data-slide-to="1"></li>
+        <li data-target="#bestseller_banner" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" >
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="./static/img/gold-white-ring.jpg" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>My Caption Title (1st Image)</h5>
+                <p>The whole caption will only show up if the screen is at least medium size.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100 " src="./static/img/gold-red-ring.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+            <img class=" d-block w-100" src="./static/img/dark-gold-ring.jpg" alt="Third slide">
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#bestseller_banner" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#bestseller_banner" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>  
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <div id="bestseller_banner" class="carousel slide" style="width: 500px" data-bs-ride="true">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#bestseller_banner" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#bestseller_banner" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#bestseller_banner" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+            <img src="./static/img/blue_neck.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+            <img src="./static/img/gold_ear.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+            <img src="./static/img/gold_neck.jpg" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#bestseller_banner" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#bestseller_banner" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div> -->
+
+
+
+
+
+
+
+        <!-- <div class="banner_box" style="display: flex-box; justify-content: center; width: inherit; ">
             <div class="banner_title">
                 <h2 style="display: flex; justify-content: center">New Arrivals</h2>
             </div>
@@ -62,7 +145,7 @@
                 <h1>___</h1>
                 <h1>___</h1>
             </div>
-        </div>
+        </div> -->
         <div class="gallery text-center  " style="width:100%;">
             {% for product in all_products %}
             <div class="card">
