--- a/razzle/flask_app/templates/edit_product.html
+++ b/razzle/flask_app/templates/edit_product.html
@@ -12,59 +12,83 @@
     <div class="banner">
         <div class="row bg-dark" style="display: flex; align-items: center; width: 100%; justify-content: flex-start;">
 
-            <div class="col col-lg-2">
-                <h1 style = " display: flex;justify-content: left; color: magenta; margin-left: 10px;">Edit painting</h1>
+            <div class="col col-lg-4">
+                <h1><a href="/dashboard">Razzle</a></h1>
             </div>
+
             <div class="col col-4 "></div>
             <div class="col">
-                <a href="/dashboard">Dashboard</a>
+                <a href="/my_orders">My Orders</a>
             </div>
-        
+            <div class="col">
+                <a href="/categories">Categories</a>
+            </div>
+            <div class="col">
+
+                <a href="/view_cart"><img src="/static/img/cart-light.png" id="cart_icon"></a>
+            </div>
             <div class="col">
                 <form action="/logout" class="bg-dark" method="post">
-                        <input type="submit" class=" bg-dark text-primary" value="Logout">
-                </form> 
+                    <input type="submit" class=" bg-dark text-primary" value="Logout">
+                </form>
             </div>
         </div>
     </div>
 
-    <div class="container bg-dark text-white" style="margin-top: 5px;">
-        {% with messages = get_flashed_messages() %}     <!-- declare a variable called messages -->
-        {% if messages %}                            <!-- check if there are any messages -->
-            {% for message in messages %}           <!--  loop through the messages-->
-                <p>{{message}}</p>                   <!-- display each message in a paragraph tag -->
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-        <form action="/edit_painting" method="post">
-            <input type="hidden" name="user_id" value="{{painting.user_id}}">
-            <input type="hidden" name="id" value="{{painting.id}}">
-            <table>
-                <tbody>
-                    <tr>
-                        <th scope="row">
-                            Title:  <input type="text" class="form-control" name="name" id="name" value="{{painting.name}}" required>
-                        </th>
-                    </tr>
-                    <tr>
-                        <th scope="row">
-                            Description:  <textarea class="form-control text" name="description" id="description" value="{{painting.description}}" required>{{painting.description}}</textarea>
-                        </th>
-                    </tr>
-                    <tr>
-                        <th scope="row">
-                            Price: <input type="number" class="form-control " name="price" id="price" value="{{painting.price}}" required>
-                        </th>
-                    </tr>
-                    <tr>
-                        <th scope="row">
-                            Quantity: <input type="number" class="form-control" name="quantity" id="quantity"  value="{{painting.quantity}}" required>
-                        </th>
-                    </tr>
-                <tbody>
-            </table>
-            <input type="submit"  value="Update">
-        </form>
+                <div class="container bg-dark text-white" style="margin-top: 5px; width:max-content; padding: 50px; border: solid 2px white;">
+            <h1>Edit Product</h1>
+            {% with messages = get_flashed_messages() %}     <!-- declare a variable called messages -->
+                        {% if messages %}                            <!-- check if there are any messages -->
+                            {% for message in messages %}            <!-- loop through the messages -->
+                                <p>{{message}}</p>                   <!-- display each message in a paragraph tag -->
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}
+            <form action="/edit_product" method="post">
+                <input type="hidden" value="{{session['user_id']}}" name="user_id">
+
+                <div class="mb-3">
+                    <h3>{{product.name}}</h3>
+                    <label for="name" class="form-label">Name</label>
+                    <input type="text" class="form-control" name="name" id="name" required value="{{product.name}}">
+
+                    <label for="description" class="form-label">Description</label>
+                    <textarea rows="3" class="form-control" name="description" id="description" required value="{{product.description}}">{{product.description}}</textarea>
+
+                    <label for="price" class="form-label">Price</label>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">$</span>
+                        <input type="decimal" class="form-control" name="price" id="price" value="{{product.price}}" required>
+                    </div>
+
+                    <label for="quantity" class="form-label">Quantity</label>
+                    <input type="number" class="form-control" name="quantity" id="quantity" required value="{{product.quantity}}">
+
+                    <label for="image_url" class="form-label">image_url</label>
+                    <input type="text" class="form-control" name="image_url" id="image_url" required value="{{product.image_url}}">
+
+                    <label for="category" class="form-label">Category</label>
+                    <!-- <select class="form-select" aria-label="Default select example" name="category" id="category" required>
+                        {% for category in all_categories %}
+                            <option value={{category.id}}>{{category.category}}</option>
+                        {% endfor %}
+                    </select> -->
+                    {% for category in all_categories %}
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="{{category.id}}" id="category_name" name="category_id">
+                            <label class="form-check-label" for="category_name">
+                                {{category.category}}
+                            </label>
+                        </div>
+                    {% endfor %}
+                    <input type="hidden" name="product_id" value="{{product.id}}">
+                </div>
+                <input type="submit" value="Edit">
+            </form>
+
+            
+
+        </div>
 
     </div>
 </body>
