--- a/razzle/flask_app/templates/view_orders.html
+++ b/razzle/flask_app/templates/view_orders.html
@@ -18,7 +18,7 @@
                 <h1><a href="/dashboard">Razzle</a></h1>
             </div>
             <div class="col-lg-2">
-                
+
             </div>
             <!-- <div class="col col-4 "></div> -->
             <div class="col">
@@ -50,7 +50,7 @@
 
         <div class="col">
             <h4>These are your orders</h4>
-            <table class="table-borderless ">
+            <table class="table table-bordered border-white text-white">
                 <thead>
                     <tr>
                         <th scope="col">Order ID</th>
