--- a/razzle/flask_app/templates/categories.html
+++ b/razzle/flask_app/templates/categories.html
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <div class="container bg-dark text-white d-flexbox">
+    <div class="container bg-dark text-white d-flexbox bg-opacity-75">
         <h1>Categories:</h1>
 
         <div class="gallery text-center" style="width:100%;">
