--- a/razzle/flask_app/templates/edit_product.html
+++ b/razzle/flask_app/templates/edit_product.html
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-                <div class="container bg-dark text-white" style="margin-top: 5px; width:max-content; padding: 50px; border: solid 2px white;">
+                <div class="container bg-dark text-white bg-opacity-75" style="margin-top: 5px; width:max-content; padding: 50px; border: solid 2px white;">
             <h1>Edit Product</h1>
             {% with messages = get_flashed_messages() %}     <!-- declare a variable called messages -->
                         {% if messages %}                            <!-- check if there are any messages -->
