--- a/razzle/flask_app/templates/view_orders.html
+++ b/razzle/flask_app/templates/view_orders.html
@@ -50,7 +50,7 @@
 
         <div class="col">
             <h4>These are your orders</h4>
-            <table class="table table-bordered border-white text-white">
+            <table class="table table-bordered border-white text-white bg-opacity-75">
                 <thead>
                     <tr>
                         <th scope="col">Order ID</th>
