--- a/razzle/flask_app/templates/cart.html
+++ b/razzle/flask_app/templates/cart.html
@@ -38,7 +38,7 @@
         </div>
     </div>
 
-    <div class="container  bg-dark text-white" style="margin-top: 20px; padding: 20px">
+    <div class="container  bg-dark text-white bg-opacity-75" style="margin-top: 20px; padding: 20px">
         <h1> Your Cart </h1>
         <table class="table table-dark table-striped text-white">
             <thead>
