--- a/razzle/flask_app/templates/dashboard.html
+++ b/razzle/flask_app/templates/dashboard.html
@@ -45,7 +45,7 @@
         </div>
     </div>
 
-    <div class="container bg-dark text-white d-flexbox">
+    <div class="container bg-dark text-white bg-opacity-75">
         {% with messages = get_flashed_messages() %}     <!-- declare a variable called messages -->
                         {% if messages %}                            <!-- check if there are any messages -->
                             {% for message in messages %}            <!-- loop through the messages -->
