--- a/razzle/flask_app/templates/view_product.html
+++ b/razzle/flask_app/templates/view_product.html
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-    <div class="container  bg-dark text-white" style="margin-top: 20px; padding: 50px;">
+    <div class="container  bg-dark text-white bg-opacity-75" style="margin-top: 20px; padding: 50px;">
         
 
         <div class="gallery text-center  " style="width:100%;">
