--- a/razzle/flask_app/templates/cart.html
+++ b/razzle/flask_app/templates/cart.html
@@ -43,6 +43,14 @@
         <table class="table table-dark table-striped text-white">
             <thead>
                 <tr>
+                    {% with messages = get_flashed_messages() %}     <!-- declare a variable called messages -->
+                        {% if messages %}                            <!-- check if there are any messages -->
+                            {% for message in messages %}            <!-- loop through the messages -->
+                                <p>{{message}}</p>                   <!-- display each message in a paragraph tag -->
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}
+                    
                     <th>Product Name</th>
                     <th>Price</th>
                     <th>Quantity</th>
@@ -53,7 +61,7 @@
                 {% for item in session['cart'] %}
                     <tr>
                     <td> {{item['name']}}</td>
-                  
+                
                     <td> ${{item.price}}</td>
 
                     <td> {{item.quantity}}</td>
@@ -66,6 +74,9 @@
         <h3>Estimated Shipping: $23.99</h3>
         <form action="/place_order" method="post">
             <button type="submit" class="btn btn-outline-info">Confirm Order</button>
+        </form>
+        <form action="/empty_cart" method="post">
+            <button type="submit" class="btn btn-outline-info">Empty Cart</button>
         </form>
     </div>
 </body>
